# news-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/: implementation_plan.md  phases.md
scripts/: run_local.sh  wait_for_postgres.py
src/news_agent/: __init__.py  config.py  db.py  health.py  jobs.py  logging.py  main.py  models.py  observability.py  queue.py  scheduler.py  schemas.py  worker.py
src/news_agent/api/: routes.py
src/news_agent/repositories/: alerts.py  articles.py  pipeline_runs.py  subscriptions.py
src/news_agent/services/: alerting.py  llm.py  normalize.py  pipeline.py  ranking.py
src/news_agent/sources/: base.py  github.py  gnews.py  hackernews.py  registry.py  rss.py
src/news_agent/ui/: dashboard.html  routes.py
tests/: conftest.py  test_alert_idempotency.py  test_api.py  test_dedup.py  test_ranking.py
